crates/dsql-core/tests/it/snapshots/it__variables__comparison_operator_defaults_remain_closed_strings.snap
---
source: crates/dsql-core/tests/it/variables.rs
expression: render_diagnostic_facts(&bowl).await
---
Error[143..157]: default for `operator` does not match inferred type numeric
