crates/dsql-core/tests/it/snapshots/it__variables__fragment_spread_envelopes_nested_bindings.snap
---
source: crates/dsql-core/tests/it/variables.rs
expression: render_definition_bindings(&bowl).await
---
UserFilter
  input.UserPosts.input.recent.clause.limit.count Structured Limit Int required=true nullable=false default=None

UserPosts
  input.recent.clause.limit.count Structured Limit Int required=true nullable=false default=None
