crates/dsql-core/tests/it/snapshots/it__variables__invalid_aggregate_predicates_do_not_infer_bindings.snap
---
source: crates/dsql-core/tests/it/variables.rs
assertion_line: 174
expression: "format!(\"diagnostics:\\n{}\\n\\nbindings:\\n{}\",\nrender_diagnostic_facts(&bowl).await, render_bindings(&bowl).await,)"
---
diagnostics:
Error[45..55]: aggregate predicate source `.kind_type` must be a direct `.`-anchored collection relation

bindings:
