crates/dsql-core/tests/it/snapshots/it__variables__predicate_extensions_infer_boolean_scalar_and_collection_bindings.snap
---
source: crates/dsql-core/tests/it/variables.rs
expression: "format!(\"diagnostics:\\n{}\\n\\nbindings:\\n{}\",\nrender_diagnostic_facts(&bowl).await, render_bindings(&bowl).await,)"
---
diagnostics:


bindings:
params.disabled TopLevel WhereValue Boolean Some("disabled") operators=[] enum=[]
params.ids TopLevel WhereValue Int Some("ids") collection operators=[] enum=[]
context.allowed_types Context WhereValue Int Some("allowed_types") collection operators=[] enum=[]
